Fixed alignment issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -715,7 +715,8 @@ td>div>span>picture>img {
     position: unset !important;
 }
 
-td>div>span>span ,.mobile-view-content>div>div>table{
+td>div>span>span,
+.mobile-view-content>div>div>table {
     display: none !important;
 }
 
@@ -728,12 +729,72 @@ p {
     width: 70% !important;
 }
 
-.customer-need>div>p{
+.customer-need>div>p {
     padding-left: 15%;
     width: 70%;
 }
 
 @media screen and (min-width:375px) and (max-width:767px) {
+
+    .tabView {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+    }
+
+    .design-features-code-block>div>div>p {
+        font-size: unset;
+    }
+
+    .design-features-code-block>div {
+        max-width: 80% !important;
+        padding-left: 0%;
+    }
+
+    .go-to>div>h3 {
+        margin: 20% 10% 5% 10% !important;
+    }
+
+    .customer-need>div>p {
+        padding: 0 !important;
+    }
+
+    .cropImg,
+    .resizeCropImage>div:nth-child(3)>img,
+    .resizeCropImage>div>img {
+        height: 170px;
+    }
+
+    .resizeCropImage {
+        width: 50% !important;
+        height: 50% !important;
+    }
+
+    .quickActionImage4 {
+        right: -60%;
+    }
+
+    .quickActionImage1>img,
+    .quickActionImage4>img,
+    .quickActionImage2>img,
+    .quickActionImage3>img {
+        width: 50% !important;
+    }
+
+    .bgCodeAssetAnima {
+        padding-top: 15%;
+        width: 200px !important;
+    }
+
+    .imgRemoveLayer1 {
+        background-position: 0% 0%, 0% 0%;
+        background-size: 200px 170px !important;
+    }
+
+    .imgRemoveLayer2>img {
+        height: 170px !important;
+        width: 200px !important;
+    }
 
     .mobile-view-content>div>div>table {
         margin: 6% 0 0% 10%;
@@ -765,7 +826,7 @@ p {
     }
 
     .getting-started>div {
-        padding: 10% 10% 20% 10% !important;
+        padding: 10% 17% 20% 12% !important;
         position: relative !important;
     }
 
@@ -788,7 +849,7 @@ p {
     }
 
     .why-integrate-sdk>div>p {
-        margin: 0 !important;
+        margin: 2% !important;
     }
 
     .editing-content>div,
@@ -838,6 +899,14 @@ p {
         width: fit-content !important;
     }
 
+    .quick-action>div:first-child>p{
+        margin: 0 11% ;
+    }
+
+    .learn-more-action>div:first-child>p {
+        margin: 0px 15%;
+    }
+
     .announcement-embed-editor>div:first-child>div>a {
         margin-bottom: 15% !important;
     }
@@ -848,11 +917,12 @@ p {
 
     .streamline_ability>div>div>div>p {
         font-size: 17px;
-        width: 100% !important;
+        width: 99% !important;
     }
 
     .streamline_ability>div>div>div {
-        padding-right: 2% !important;
+        width: 90% !important;
+        padding-right: 4% !important;
     }
 
     .getting-started>div {
@@ -910,7 +980,7 @@ p {
     }
 
     .design-features-code-block {
-        padding: 10% 10% 0 10% !important;
+        padding: 10% 0% 0 5% !important;
     }
 
     .why-integrate-sdk {
@@ -943,6 +1013,10 @@ p {
 
     .deployment>div>p:first-child>span {
         padding: 10% 0;
+    }
+
+    .embed-adobe{
+        padding: 8% !important;
     }
 }
 
@@ -977,6 +1051,7 @@ p {
     }
 
     .embed-adobe>div {
+        gap: 30px;
         display: flex !important;
         flex-direction: column !important;
     }
@@ -997,11 +1072,18 @@ p {
         align-items: flex-start;
     }
 
-    .quick-action-hero-block>div>div:first-child>h1,
-    .quick-action-hero-block>div>div:first-child>p,
     .quick-action-hero-block .quickActionVideo,
     .quick-action-hero-block>div>div:first-child {
         width: 100% !important;
+    }
+
+    .quick-action-hero-block>div>div:first-child>h1{
+        width: 95% !important;
+    }
+
+    .quick-action-hero-block>div>div:first-child>p{
+        width: 100% !important;
+        padding: 0 !important;
     }
 
     .quick-action-hero-block .quickActionVideo {
@@ -1077,6 +1159,11 @@ p {
 
 @media screen and (min-width:768px) and (max-width:1024px) {
 
+    .quick-action-block>div>p:last-child{
+        padding: 0 24%;
+    }
+
+
     .embed-adobe>div>div:first-child>p:last-child {
         width: 80% !important;
     }
@@ -1105,7 +1192,7 @@ p {
     }
 
     .getting-started {
-        margin-bottom: 10%;
+        margin-bottom: 20%;
     }
 
     .summary-block,
@@ -1160,10 +1247,11 @@ p {
     }
 
     .getting-started>div>p {
-        font-size: 18px;
+        font-size: 19px;
     }
 
     .customer-need>div>p {
+        width: 85% !important;
         padding: 0 8% !important;
     }
 
